set(COMMON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

set(COMMON_SOURCE
        ${COMMON_SOURCE_DIR}/Contracts.cpp
        ${COMMON_SOURCE_DIR}/FileLogger.cpp
        ${COMMON_SOURCE_DIR}/Thread.cpp
        ${COMMON_SOURCE_DIR}/TrenchBroomApp.cpp
        ${COMMON_SOURCE_DIR}/ui/AboutDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/Action.cpp
        ${COMMON_SOURCE_DIR}/ui/ActionBuilder.cpp
        ${COMMON_SOURCE_DIR}/ui/ActionContext.cpp
        ${COMMON_SOURCE_DIR}/ui/ActionExecutionContext.cpp
        ${COMMON_SOURCE_DIR}/ui/ActionManager.cpp
        ${COMMON_SOURCE_DIR}/ui/ActionMenu.cpp
        ${COMMON_SOURCE_DIR}/ui/Animation.cpp
        ${COMMON_SOURCE_DIR}/ui/AppInfoPanel.cpp
        ${COMMON_SOURCE_DIR}/ui/AssembleBrushTool.cpp
        ${COMMON_SOURCE_DIR}/ui/AssembleBrushToolController3D.cpp
        ${COMMON_SOURCE_DIR}/ui/AutoSizeTableRows.cpp
        ${COMMON_SOURCE_DIR}/ui/BitmapButton.cpp
        ${COMMON_SOURCE_DIR}/ui/BorderLine.cpp
        ${COMMON_SOURCE_DIR}/ui/BorderPanel.cpp
        ${COMMON_SOURCE_DIR}/ui/CameraAnimation.cpp
        ${COMMON_SOURCE_DIR}/ui/CameraLinkHelper.cpp
        ${COMMON_SOURCE_DIR}/ui/CameraTool2D.cpp
        ${COMMON_SOURCE_DIR}/ui/CameraTool3D.cpp
        ${COMMON_SOURCE_DIR}/ui/CellLayout.cpp
        ${COMMON_SOURCE_DIR}/ui/CellView.cpp
        ${COMMON_SOURCE_DIR}/ui/ChoosePathTypeDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/ClickableLabel.cpp
        ${COMMON_SOURCE_DIR}/ui/ClickableTitleBar.cpp
        ${COMMON_SOURCE_DIR}/ui/ClipTool.cpp
        ${COMMON_SOURCE_DIR}/ui/ClipToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/CollapsibleTitledPanel.cpp
        ${COMMON_SOURCE_DIR}/ui/ColorButton.cpp
        ${COMMON_SOURCE_DIR}/ui/ColorModel.cpp
        ${COMMON_SOURCE_DIR}/ui/ColorsPreferencePane.cpp
        ${COMMON_SOURCE_DIR}/ui/ColorTable.cpp
        ${COMMON_SOURCE_DIR}/ui/CompilationContext.cpp
        ${COMMON_SOURCE_DIR}/ui/CompilationDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/CompilationProfileEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/CompilationProfileListBox.cpp
        ${COMMON_SOURCE_DIR}/ui/CompilationProfileManager.cpp
        ${COMMON_SOURCE_DIR}/ui/CompilationRun.cpp
        ${COMMON_SOURCE_DIR}/ui/CompilationRunner.cpp
        ${COMMON_SOURCE_DIR}/ui/CompilationTaskListBox.cpp
        ${COMMON_SOURCE_DIR}/ui/CompilationVariables.cpp
        ${COMMON_SOURCE_DIR}/ui/Console.cpp
        ${COMMON_SOURCE_DIR}/ui/ContainerBar.cpp
        ${COMMON_SOURCE_DIR}/ui/ControlListBox.cpp
        ${COMMON_SOURCE_DIR}/ui/ControlListBox.cpp
        ${COMMON_SOURCE_DIR}/ui/CrashDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/CrashReporter.cpp
        ${COMMON_SOURCE_DIR}/ui/CreateBrushesToolBase.cpp
        ${COMMON_SOURCE_DIR}/ui/CreateEntityTool.cpp
        ${COMMON_SOURCE_DIR}/ui/CreateEntityToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/CurrentGameIndicator.cpp
        ${COMMON_SOURCE_DIR}/ui/CyclingMapView.cpp
        ${COMMON_SOURCE_DIR}/ui/DialogButtonLayout.cpp
        ${COMMON_SOURCE_DIR}/ui/DialogHeader.cpp
        ${COMMON_SOURCE_DIR}/ui/DrawShapeTool.cpp
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolController2D.cpp
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolController3D.cpp
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolExtension.cpp
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolExtensions.cpp
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolPage.cpp
        ${COMMON_SOURCE_DIR}/ui/DropTracker.cpp
        ${COMMON_SOURCE_DIR}/ui/EdgeTool.cpp
        ${COMMON_SOURCE_DIR}/ui/EdgeToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/ElidedLabel.cpp
        ${COMMON_SOURCE_DIR}/ui/EmptyWidget.cpp
        ${COMMON_SOURCE_DIR}/ui/EnableDisableTagCallback.cpp
        ${COMMON_SOURCE_DIR}/ui/EntityBrowser.cpp
        ${COMMON_SOURCE_DIR}/ui/EntityBrowserView.cpp
        ${COMMON_SOURCE_DIR}/ui/EntityDefinitionFileChooser.cpp
        ${COMMON_SOURCE_DIR}/ui/EntityInspector.cpp
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyGrid.cpp
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyItemDelegate.cpp
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyModel.cpp
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyTable.cpp
        ${COMMON_SOURCE_DIR}/ui/ExtrudeTool.cpp
        ${COMMON_SOURCE_DIR}/ui/ExtrudeToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/FaceAttribsEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/FaceInspector.cpp
        ${COMMON_SOURCE_DIR}/ui/FaceTool.cpp
        ${COMMON_SOURCE_DIR}/ui/FaceToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/FileDialogDefaultDir.cpp
        ${COMMON_SOURCE_DIR}/ui/FlagsEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/FlagsPopupEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/FlashSelectionAnimation.cpp
        ${COMMON_SOURCE_DIR}/ui/FlyModeHelper.cpp
        ${COMMON_SOURCE_DIR}/ui/FormWithSectionsLayout.cpp
        ${COMMON_SOURCE_DIR}/ui/FourPaneMapView.cpp
        ${COMMON_SOURCE_DIR}/ui/FrameManager.cpp
        ${COMMON_SOURCE_DIR}/ui/GameDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/GameEngineDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/GameEngineProfileEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/GameEngineProfileListBox.cpp
        ${COMMON_SOURCE_DIR}/ui/GameEngineProfileManager.cpp
        ${COMMON_SOURCE_DIR}/ui/GameListBox.cpp
        ${COMMON_SOURCE_DIR}/ui/GamesPreferencePane.cpp
        ${COMMON_SOURCE_DIR}/ui/GestureTracker.cpp
        ${COMMON_SOURCE_DIR}/ui/GetVersion.cpp
        ${COMMON_SOURCE_DIR}/ui/HandleDragTracker.cpp
        ${COMMON_SOURCE_DIR}/ui/ImageListBox.cpp
        ${COMMON_SOURCE_DIR}/ui/ImageUtils.cpp
        ${COMMON_SOURCE_DIR}/ui/InfoPanel.cpp
        ${COMMON_SOURCE_DIR}/ui/InputEvent.cpp
        ${COMMON_SOURCE_DIR}/ui/InputState.cpp
        ${COMMON_SOURCE_DIR}/ui/Inspector.cpp
        ${COMMON_SOURCE_DIR}/ui/IssueBrowser.cpp
        ${COMMON_SOURCE_DIR}/ui/IssueBrowserView.cpp
        ${COMMON_SOURCE_DIR}/ui/KeyboardPreferencePane.cpp
        ${COMMON_SOURCE_DIR}/ui/KeyboardShortcutItemDelegate.cpp
        ${COMMON_SOURCE_DIR}/ui/KeyboardShortcutModel.cpp
        ${COMMON_SOURCE_DIR}/ui/KeySequenceEdit.cpp
        ${COMMON_SOURCE_DIR}/ui/Lasso.cpp
        ${COMMON_SOURCE_DIR}/ui/LaunchGameEngine.cpp
        ${COMMON_SOURCE_DIR}/ui/LaunchGameEngineDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/LayerEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/LayerListBox.cpp
        ${COMMON_SOURCE_DIR}/ui/LimitedKeySequenceEdit.cpp
        ${COMMON_SOURCE_DIR}/ui/MapDocument.cpp
        ${COMMON_SOURCE_DIR}/ui/MapFrame.cpp
        ${COMMON_SOURCE_DIR}/ui/MapInspector.cpp
        ${COMMON_SOURCE_DIR}/ui/MapView.cpp
        ${COMMON_SOURCE_DIR}/ui/MapView2D.cpp
        ${COMMON_SOURCE_DIR}/ui/MapView3D.cpp
        ${COMMON_SOURCE_DIR}/ui/MapViewActivationTracker.cpp
        ${COMMON_SOURCE_DIR}/ui/MapViewBar.cpp
        ${COMMON_SOURCE_DIR}/ui/MapViewBase.cpp
        ${COMMON_SOURCE_DIR}/ui/MapViewContainer.cpp
        ${COMMON_SOURCE_DIR}/ui/MapViewToolBox.cpp
        ${COMMON_SOURCE_DIR}/ui/MaterialBrowser.cpp
        ${COMMON_SOURCE_DIR}/ui/MaterialBrowserView.cpp
        ${COMMON_SOURCE_DIR}/ui/MaterialCollectionEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/MiniToolBarLayout.cpp
        ${COMMON_SOURCE_DIR}/ui/ModEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/MousePreferencePane.cpp
        ${COMMON_SOURCE_DIR}/ui/MoveHandleDragTracker.cpp
        ${COMMON_SOURCE_DIR}/ui/MoveObjectsTool.cpp
        ${COMMON_SOURCE_DIR}/ui/MoveObjectsToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/MultiCompletionLineEdit.cpp
        ${COMMON_SOURCE_DIR}/ui/MultiPaneMapView.cpp
        ${COMMON_SOURCE_DIR}/ui/ObjExportDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/OnePaneMapView.cpp
        ${COMMON_SOURCE_DIR}/ui/PickRequest.cpp
        ${COMMON_SOURCE_DIR}/ui/PopupButton.cpp
        ${COMMON_SOURCE_DIR}/ui/PopupWindow.cpp
        ${COMMON_SOURCE_DIR}/ui/PreferenceDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/PreferencePane.cpp
        ${COMMON_SOURCE_DIR}/ui/QColorUtils.cpp
        ${COMMON_SOURCE_DIR}/ui/QPathUtils.cpp
        ${COMMON_SOURCE_DIR}/ui/QPreferenceStore.cpp
        ${COMMON_SOURCE_DIR}/ui/QPreferenceStoreDelegate.cpp
        ${COMMON_SOURCE_DIR}/ui/QPreferenceStoreUtils.cpp
        ${COMMON_SOURCE_DIR}/ui/QStringUtils.cpp
        ${COMMON_SOURCE_DIR}/ui/QStyleUtils.cpp
        ${COMMON_SOURCE_DIR}/ui/QWidgetUtils.cpp
        ${COMMON_SOURCE_DIR}/ui/QtUtils.cpp
        ${COMMON_SOURCE_DIR}/ui/RecentDocumentListBox.cpp
        ${COMMON_SOURCE_DIR}/ui/RecentDocuments.cpp
        ${COMMON_SOURCE_DIR}/ui/RenderView.cpp
        ${COMMON_SOURCE_DIR}/ui/ReplaceMaterialDialog.cpp
        ${COMMON_SOURCE_DIR}/ui/RotateHandle.cpp
        ${COMMON_SOURCE_DIR}/ui/RotateTool.cpp
        ${COMMON_SOURCE_DIR}/ui/RotateToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/RotateToolPage.cpp
        ${COMMON_SOURCE_DIR}/ui/ScaleTool.cpp
        ${COMMON_SOURCE_DIR}/ui/ScaleToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/ScaleToolPage.cpp
        ${COMMON_SOURCE_DIR}/ui/SearchBox.cpp
        ${COMMON_SOURCE_DIR}/ui/SelectionTool.cpp
        ${COMMON_SOURCE_DIR}/ui/SetBrushFaceAttributesTool.cpp
        ${COMMON_SOURCE_DIR}/ui/ShearTool.cpp
        ${COMMON_SOURCE_DIR}/ui/ShearToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/SignalDelayer.cpp
        ${COMMON_SOURCE_DIR}/ui/SliderWithLabel.cpp
        ${COMMON_SOURCE_DIR}/ui/SmartChoiceEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/SmartColorEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/SmartDefaultPropertyEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/SmartFlagsEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/SmartPropertyEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/SmartPropertyEditorManager.cpp
        ${COMMON_SOURCE_DIR}/ui/SmartWadEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/SpinControl.cpp
        ${COMMON_SOURCE_DIR}/ui/Splitter.cpp
        ${COMMON_SOURCE_DIR}/ui/SwitchableMapViewContainer.cpp
        ${COMMON_SOURCE_DIR}/ui/SwitchableTitledPanel.cpp
        ${COMMON_SOURCE_DIR}/ui/SyncHeightEventFilter.cpp
        ${COMMON_SOURCE_DIR}/ui/SystemPaths.cpp
        ${COMMON_SOURCE_DIR}/ui/TabBar.cpp
        ${COMMON_SOURCE_DIR}/ui/TabBook.cpp
        ${COMMON_SOURCE_DIR}/ui/TextOutputAdapter.cpp
        ${COMMON_SOURCE_DIR}/ui/ThreePaneMapView.cpp
        ${COMMON_SOURCE_DIR}/ui/TitleBar.cpp
        ${COMMON_SOURCE_DIR}/ui/TitledPanel.cpp
        ${COMMON_SOURCE_DIR}/ui/Tool.cpp
        ${COMMON_SOURCE_DIR}/ui/ToolBox.cpp
        ${COMMON_SOURCE_DIR}/ui/ToolBoxConnector.cpp
        ${COMMON_SOURCE_DIR}/ui/ToolChain.cpp
        ${COMMON_SOURCE_DIR}/ui/ToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/TwoPaneMapView.cpp
        ${COMMON_SOURCE_DIR}/ui/UpdateConfig.cpp
        ${COMMON_SOURCE_DIR}/ui/UpdatePreferencePane.cpp
        ${COMMON_SOURCE_DIR}/ui/UpdateVersion.cpp
        ${COMMON_SOURCE_DIR}/ui/UVCameraTool.cpp
        ${COMMON_SOURCE_DIR}/ui/UVEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/UVOffsetTool.cpp
        ${COMMON_SOURCE_DIR}/ui/UVOriginTool.cpp
        ${COMMON_SOURCE_DIR}/ui/UVRotateTool.cpp
        ${COMMON_SOURCE_DIR}/ui/UVScaleTool.cpp
        ${COMMON_SOURCE_DIR}/ui/UVShearTool.cpp
        ${COMMON_SOURCE_DIR}/ui/UVView.cpp
        ${COMMON_SOURCE_DIR}/ui/UVViewHelper.cpp
        ${COMMON_SOURCE_DIR}/ui/VariableStoreModel.cpp
        ${COMMON_SOURCE_DIR}/ui/VertexTool.cpp
        ${COMMON_SOURCE_DIR}/ui/VertexToolController.cpp
        ${COMMON_SOURCE_DIR}/ui/ViewConstants.cpp
        ${COMMON_SOURCE_DIR}/ui/ViewEditor.cpp
        ${COMMON_SOURCE_DIR}/ui/ViewEffectsService.cpp
        ${COMMON_SOURCE_DIR}/ui/ViewPreferencePane.cpp
        ${COMMON_SOURCE_DIR}/ui/ViewUtils.cpp
        ${COMMON_SOURCE_DIR}/ui/WelcomeWindow.cpp
        ${COMMON_SOURCE_DIR}/ui/WidgetState.cpp
)

set(COMMON_HEADER
        ${COMMON_SOURCE_DIR}/Contracts.h
        ${COMMON_SOURCE_DIR}/FileLogger.h
        ${COMMON_SOURCE_DIR}/Thread.h
        ${COMMON_SOURCE_DIR}/TrenchBroomApp.h
        ${COMMON_SOURCE_DIR}/ui/AboutDialog.h
        ${COMMON_SOURCE_DIR}/ui/Action.h
        ${COMMON_SOURCE_DIR}/ui/ActionBuilder.h
        ${COMMON_SOURCE_DIR}/ui/ActionContext.h
        ${COMMON_SOURCE_DIR}/ui/ActionExecutionContext.h
        ${COMMON_SOURCE_DIR}/ui/ActionManager.h
        ${COMMON_SOURCE_DIR}/ui/ActionMenu.h
        ${COMMON_SOURCE_DIR}/ui/Animation.h
        ${COMMON_SOURCE_DIR}/ui/AppInfoPanel.h
        ${COMMON_SOURCE_DIR}/ui/AssembleBrushTool.h
        ${COMMON_SOURCE_DIR}/ui/AssembleBrushToolController3D.h
        ${COMMON_SOURCE_DIR}/ui/AutoSizeTableRows.h
        ${COMMON_SOURCE_DIR}/ui/BitmapButton.h
        ${COMMON_SOURCE_DIR}/ui/BorderLine.h
        ${COMMON_SOURCE_DIR}/ui/BorderPanel.h
        ${COMMON_SOURCE_DIR}/ui/CameraAnimation.h
        ${COMMON_SOURCE_DIR}/ui/CameraLinkHelper.h
        ${COMMON_SOURCE_DIR}/ui/CameraTool2D.h
        ${COMMON_SOURCE_DIR}/ui/CameraTool3D.h
        ${COMMON_SOURCE_DIR}/ui/CellLayout.h
        ${COMMON_SOURCE_DIR}/ui/CellView.h
        ${COMMON_SOURCE_DIR}/ui/ChoosePathTypeDialog.h
        ${COMMON_SOURCE_DIR}/ui/ClickableLabel.h
        ${COMMON_SOURCE_DIR}/ui/ClickableTitleBar.h
        ${COMMON_SOURCE_DIR}/ui/ClipTool.h
        ${COMMON_SOURCE_DIR}/ui/ClipToolController.h
        ${COMMON_SOURCE_DIR}/ui/CollapsibleTitledPanel.h
        ${COMMON_SOURCE_DIR}/ui/ColorButton.h
        ${COMMON_SOURCE_DIR}/ui/ColorModel.h
        ${COMMON_SOURCE_DIR}/ui/ColorsPreferencePane.h
        ${COMMON_SOURCE_DIR}/ui/ColorTable.h
        ${COMMON_SOURCE_DIR}/ui/CompilationContext.h
        ${COMMON_SOURCE_DIR}/ui/CompilationDialog.h
        ${COMMON_SOURCE_DIR}/ui/CompilationProfileEditor.h
        ${COMMON_SOURCE_DIR}/ui/CompilationProfileListBox.h
        ${COMMON_SOURCE_DIR}/ui/CompilationProfileManager.h
        ${COMMON_SOURCE_DIR}/ui/CompilationRun.h
        ${COMMON_SOURCE_DIR}/ui/CompilationRunner.h
        ${COMMON_SOURCE_DIR}/ui/CompilationTaskListBox.h
        ${COMMON_SOURCE_DIR}/ui/CompilationVariables.h
        ${COMMON_SOURCE_DIR}/ui/Console.h
        ${COMMON_SOURCE_DIR}/ui/ContainerBar.h
        ${COMMON_SOURCE_DIR}/ui/ControlListBox.h
        ${COMMON_SOURCE_DIR}/ui/CrashDialog.h
        ${COMMON_SOURCE_DIR}/ui/CrashReporter.h
        ${COMMON_SOURCE_DIR}/ui/CreateBrushesToolBase.h
        ${COMMON_SOURCE_DIR}/ui/CreateEntityTool.h
        ${COMMON_SOURCE_DIR}/ui/CreateEntityToolController.h
        ${COMMON_SOURCE_DIR}/ui/CurrentGameIndicator.h
        ${COMMON_SOURCE_DIR}/ui/CyclingMapView.h
        ${COMMON_SOURCE_DIR}/ui/DialogButtonLayout.h
        ${COMMON_SOURCE_DIR}/ui/DialogHeader.h
        ${COMMON_SOURCE_DIR}/ui/DrawShapeTool.h
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolController2D.h
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolController3D.h
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolExtension.h
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolExtensions.h
        ${COMMON_SOURCE_DIR}/ui/DrawShapeToolPage.h
        ${COMMON_SOURCE_DIR}/ui/DropTracker.h
        ${COMMON_SOURCE_DIR}/ui/EdgeTool.h
        ${COMMON_SOURCE_DIR}/ui/EdgeToolController.h
        ${COMMON_SOURCE_DIR}/ui/ElidedLabel.h
        ${COMMON_SOURCE_DIR}/ui/EmptyWidget.h
        ${COMMON_SOURCE_DIR}/ui/EnableDisableTagCallback.h
        ${COMMON_SOURCE_DIR}/ui/EntityBrowser.h
        ${COMMON_SOURCE_DIR}/ui/EntityBrowserView.h
        ${COMMON_SOURCE_DIR}/ui/EntityDefinitionFileChooser.h
        ${COMMON_SOURCE_DIR}/ui/EntityInspector.h
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyEditor.h
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyGrid.h
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyItemDelegate.h
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyModel.h
        ${COMMON_SOURCE_DIR}/ui/EntityPropertyTable.h
        ${COMMON_SOURCE_DIR}/ui/ExtrudeTool.h
        ${COMMON_SOURCE_DIR}/ui/ExtrudeToolController.h
        ${COMMON_SOURCE_DIR}/ui/FaceAttribsEditor.h
        ${COMMON_SOURCE_DIR}/ui/FaceInspector.h
        ${COMMON_SOURCE_DIR}/ui/FaceTool.h
        ${COMMON_SOURCE_DIR}/ui/FaceToolController.h
        ${COMMON_SOURCE_DIR}/ui/FileDialogDefaultDir.h
        ${COMMON_SOURCE_DIR}/ui/FlagsEditor.h
        ${COMMON_SOURCE_DIR}/ui/FlagsPopupEditor.h
        ${COMMON_SOURCE_DIR}/ui/FlashSelectionAnimation.h
        ${COMMON_SOURCE_DIR}/ui/FlyModeHelper.h
        ${COMMON_SOURCE_DIR}/ui/FormWithSectionsLayout.h
        ${COMMON_SOURCE_DIR}/ui/FourPaneMapView.h
        ${COMMON_SOURCE_DIR}/ui/FrameManager.h
        ${COMMON_SOURCE_DIR}/ui/GameDialog.h
        ${COMMON_SOURCE_DIR}/ui/GameEngineDialog.h
        ${COMMON_SOURCE_DIR}/ui/GameEngineProfileEditor.h
        ${COMMON_SOURCE_DIR}/ui/GameEngineProfileListBox.h
        ${COMMON_SOURCE_DIR}/ui/GameEngineProfileManager.h
        ${COMMON_SOURCE_DIR}/ui/GameListBox.h
        ${COMMON_SOURCE_DIR}/ui/GamesPreferencePane.h
        ${COMMON_SOURCE_DIR}/ui/GestureTracker.h
        ${COMMON_SOURCE_DIR}/ui/GetVersion.h
        ${COMMON_SOURCE_DIR}/ui/HandleDragTracker.h
        ${COMMON_SOURCE_DIR}/ui/ImageListBox.h
        ${COMMON_SOURCE_DIR}/ui/ImageUtils.h
        ${COMMON_SOURCE_DIR}/ui/InfoPanel.h
        ${COMMON_SOURCE_DIR}/ui/InputEvent.h
        ${COMMON_SOURCE_DIR}/ui/InputState.h
        ${COMMON_SOURCE_DIR}/ui/Inspector.h
        ${COMMON_SOURCE_DIR}/ui/IssueBrowser.h
        ${COMMON_SOURCE_DIR}/ui/IssueBrowserView.h
        ${COMMON_SOURCE_DIR}/ui/KeyboardPreferencePane.h
        ${COMMON_SOURCE_DIR}/ui/KeyboardShortcutItemDelegate.h
        ${COMMON_SOURCE_DIR}/ui/KeyboardShortcutModel.h
        ${COMMON_SOURCE_DIR}/ui/KeySequenceEdit.h
        ${COMMON_SOURCE_DIR}/ui/Lasso.h
        ${COMMON_SOURCE_DIR}/ui/LaunchGameEngine.h
        ${COMMON_SOURCE_DIR}/ui/LaunchGameEngineDialog.h
        ${COMMON_SOURCE_DIR}/ui/LayerEditor.h
        ${COMMON_SOURCE_DIR}/ui/LayerListBox.h
        ${COMMON_SOURCE_DIR}/ui/LimitedKeySequenceEdit.h
        ${COMMON_SOURCE_DIR}/ui/MapDocument.h
        ${COMMON_SOURCE_DIR}/ui/MapFrame.h
        ${COMMON_SOURCE_DIR}/ui/MapInspector.h
        ${COMMON_SOURCE_DIR}/ui/MapView.h
        ${COMMON_SOURCE_DIR}/ui/MapView2D.h
        ${COMMON_SOURCE_DIR}/ui/MapView3D.h
        ${COMMON_SOURCE_DIR}/ui/MapViewActivationTracker.h
        ${COMMON_SOURCE_DIR}/ui/MapViewBar.h
        ${COMMON_SOURCE_DIR}/ui/MapViewBase.h
        ${COMMON_SOURCE_DIR}/ui/MapViewContainer.h
        ${COMMON_SOURCE_DIR}/ui/MapViewLayout.h
        ${COMMON_SOURCE_DIR}/ui/MapViewToolBox.h
        ${COMMON_SOURCE_DIR}/ui/MaterialBrowser.h
        ${COMMON_SOURCE_DIR}/ui/MaterialBrowserView.h
        ${COMMON_SOURCE_DIR}/ui/MaterialCollectionEditor.h
        ${COMMON_SOURCE_DIR}/ui/MiniToolBarLayout.h
        ${COMMON_SOURCE_DIR}/ui/ModEditor.h
        ${COMMON_SOURCE_DIR}/ui/MousePreferencePane.h
        ${COMMON_SOURCE_DIR}/ui/MoveHandleDragTracker.h
        ${COMMON_SOURCE_DIR}/ui/MoveObjectsTool.h
        ${COMMON_SOURCE_DIR}/ui/MoveObjectsToolController.h
        ${COMMON_SOURCE_DIR}/ui/MultiCompletionLineEdit.h
        ${COMMON_SOURCE_DIR}/ui/MultiPaneMapView.h
        ${COMMON_SOURCE_DIR}/ui/ObjExportDialog.h
        ${COMMON_SOURCE_DIR}/ui/OnePaneMapView.h
        ${COMMON_SOURCE_DIR}/ui/PickRequest.h
        ${COMMON_SOURCE_DIR}/ui/PopupButton.h
        ${COMMON_SOURCE_DIR}/ui/PopupWindow.h
        ${COMMON_SOURCE_DIR}/ui/PreferenceDialog.h
        ${COMMON_SOURCE_DIR}/ui/PreferencePane.h
        ${COMMON_SOURCE_DIR}/ui/QColorUtils.h
        ${COMMON_SOURCE_DIR}/ui/QPathUtils.h
        ${COMMON_SOURCE_DIR}/ui/QPreferenceStore.h
        ${COMMON_SOURCE_DIR}/ui/QPreferenceStoreDelegate.h
        ${COMMON_SOURCE_DIR}/ui/QPreferenceStoreUtils.h
        ${COMMON_SOURCE_DIR}/ui/QStringUtils.h
        ${COMMON_SOURCE_DIR}/ui/QStyleUtils.h
        ${COMMON_SOURCE_DIR}/ui/QWidgetUtils.h
        ${COMMON_SOURCE_DIR}/ui/QtUtils.h
        ${COMMON_SOURCE_DIR}/ui/RecentDocumentListBox.h
        ${COMMON_SOURCE_DIR}/ui/RecentDocuments.h
        ${COMMON_SOURCE_DIR}/ui/RenderView.h
        ${COMMON_SOURCE_DIR}/ui/ReplaceMaterialDialog.h
        ${COMMON_SOURCE_DIR}/ui/RotateHandle.h
        ${COMMON_SOURCE_DIR}/ui/RotateTool.h
        ${COMMON_SOURCE_DIR}/ui/RotateToolController.h
        ${COMMON_SOURCE_DIR}/ui/RotateToolPage.h
        ${COMMON_SOURCE_DIR}/ui/ScaleTool.h
        ${COMMON_SOURCE_DIR}/ui/ScaleToolController.h
        ${COMMON_SOURCE_DIR}/ui/ScaleToolPage.h
        ${COMMON_SOURCE_DIR}/ui/SearchBox.h
        ${COMMON_SOURCE_DIR}/ui/SelectionTool.h
        ${COMMON_SOURCE_DIR}/ui/SetBrushFaceAttributesTool.h
        ${COMMON_SOURCE_DIR}/ui/ShearTool.h
        ${COMMON_SOURCE_DIR}/ui/ShearToolController.h
        ${COMMON_SOURCE_DIR}/ui/SignalDelayer.h
        ${COMMON_SOURCE_DIR}/ui/SliderWithLabel.h
        ${COMMON_SOURCE_DIR}/ui/SmartChoiceEditor.h
        ${COMMON_SOURCE_DIR}/ui/SmartColorEditor.h
        ${COMMON_SOURCE_DIR}/ui/SmartDefaultPropertyEditor.h
        ${COMMON_SOURCE_DIR}/ui/SmartFlagsEditor.h
        ${COMMON_SOURCE_DIR}/ui/SmartPropertyEditor.h
        ${COMMON_SOURCE_DIR}/ui/SmartPropertyEditorManager.h
        ${COMMON_SOURCE_DIR}/ui/SmartWadEditor.h
        ${COMMON_SOURCE_DIR}/ui/SpinControl.h
        ${COMMON_SOURCE_DIR}/ui/Splitter.h
        ${COMMON_SOURCE_DIR}/ui/SwitchableMapViewContainer.h
        ${COMMON_SOURCE_DIR}/ui/SwitchableTitledPanel.h
        ${COMMON_SOURCE_DIR}/ui/SyncHeightEventFilter.h
        ${COMMON_SOURCE_DIR}/ui/SystemPaths.h
        ${COMMON_SOURCE_DIR}/ui/TabBar.h
        ${COMMON_SOURCE_DIR}/ui/TabBook.h
        ${COMMON_SOURCE_DIR}/ui/TextOutputAdapter.h
        ${COMMON_SOURCE_DIR}/ui/ThreePaneMapView.h
        ${COMMON_SOURCE_DIR}/ui/TitleBar.h
        ${COMMON_SOURCE_DIR}/ui/TitledPanel.h
        ${COMMON_SOURCE_DIR}/ui/Tool.h
        ${COMMON_SOURCE_DIR}/ui/ToolBox.h
        ${COMMON_SOURCE_DIR}/ui/ToolBoxConnector.h
        ${COMMON_SOURCE_DIR}/ui/ToolChain.h
        ${COMMON_SOURCE_DIR}/ui/ToolController.h
        ${COMMON_SOURCE_DIR}/ui/TwoPaneMapView.h
        ${COMMON_SOURCE_DIR}/ui/UpdateConfig.h
        ${COMMON_SOURCE_DIR}/ui/UpdatePreferencePane.h
        ${COMMON_SOURCE_DIR}/ui/UpdateVersion.h
        ${COMMON_SOURCE_DIR}/ui/UVCameraTool.h
        ${COMMON_SOURCE_DIR}/ui/UVEditor.h
        ${COMMON_SOURCE_DIR}/ui/UVOffsetTool.h
        ${COMMON_SOURCE_DIR}/ui/UVOriginTool.h
        ${COMMON_SOURCE_DIR}/ui/UVRotateTool.h
        ${COMMON_SOURCE_DIR}/ui/UVScaleTool.h
        ${COMMON_SOURCE_DIR}/ui/UVShearTool.h
        ${COMMON_SOURCE_DIR}/ui/UVView.h
        ${COMMON_SOURCE_DIR}/ui/UVViewHelper.h
        ${COMMON_SOURCE_DIR}/ui/VariableStoreModel.h
        ${COMMON_SOURCE_DIR}/ui/VertexTool.h
        ${COMMON_SOURCE_DIR}/ui/VertexToolBase.h
        ${COMMON_SOURCE_DIR}/ui/VertexToolController.h
        ${COMMON_SOURCE_DIR}/ui/VertexToolControllerBase.h
        ${COMMON_SOURCE_DIR}/ui/ViewConstants.h
        ${COMMON_SOURCE_DIR}/ui/ViewEditor.h
        ${COMMON_SOURCE_DIR}/ui/ViewEffectsService.h
        ${COMMON_SOURCE_DIR}/ui/ViewPreferencePane.h
        ${COMMON_SOURCE_DIR}/ui/ViewUtils.h
        ${COMMON_SOURCE_DIR}/ui/WelcomeWindow.h
        ${COMMON_SOURCE_DIR}/ui/WidgetState.h
)

add_library(common OBJECT ${COMMON_SOURCE} ${COMMON_HEADER})
set_target_properties(common PROPERTIES AUTOMOC TRUE)
target_include_directories(common PUBLIC ${COMMON_SOURCE_DIR})
target_link_libraries(common 
  PUBLIC TbBaseLib TbElLib TbFsLib TbGlLib TbMdlLib TbPreferencesLib TbRenderLib KdLib VmLib Qt6::Widgets Qt6::OpenGL Qt6::OpenGLWidgets Qt6::Svg
  PRIVATE UpdateLib cpptrace::cpptrace fmt::fmt-header-only)

target_link_libraries(common PRIVATE CompilerConfig PrecompileStdHeaders PrecompileQtHeaders)

# Organize files into IDE folders
source_group(TREE "${COMMON_SOURCE_DIR}" FILES ${COMMON_SOURCE} ${COMMON_HEADER})

if(APPLE)
    # Silence macOS OpenGL deprecation warnings
    target_compile_definitions(common PUBLIC GL_SILENCE_DEPRECATION)
endif()

# Create the cmake script for generating the version information
target_include_directories(common PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
add_custom_target(generate_version ${CMAKE_COMMAND}
  -D UTILS="${CMAKE_SOURCE_DIR}/cmake/Utils.cmake"
  -D APP_BUILD_TYPE="${APP_BUILD_TYPE}"
  -D SRC="${COMMON_SOURCE_DIR}/Version.h.in"
  -D DST="${CMAKE_CURRENT_BINARY_DIR}/Version.h"
  -D GIT_EXECUTABLE="${GIT_EXECUTABLE}"
  -P "${CMAKE_CURRENT_SOURCE_DIR}/cmake/GenerateVersion.cmake")
add_dependencies(common generate_version)

add_subdirectory(test)
